Adjust to match solution I was acceptably close to provided solution

--- a/foundations/01-css-methods/styles.css
+++ b/foundations/01-css-methods/styles.css
@@ -1,7 +1,7 @@
 div{
     text-align: center;
-    font-size:xx-large;
-    font-weight: 700;
+    font-size: 32px;
+    font-weight: bold;
     color: white;
-    background-color: orangered;
+    background-color: red;
 }
