--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -2,19 +2,18 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.class{
+.odd{
     background-color: pink;
 }
 
-#one{
+#two{
     color: blue;
     font-size: 64px;
 }
 
-.cooler, #another{
+.change-text-size{
     font-size: 32px;
 }
-
 
 #another{
     background-color: greenyellow;
