--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -6,13 +6,26 @@ body {
   margin: 0;
   background: #eee;
   font-family: Besley, serif;
+  
+}
+
+.left, .right{
+  display: flex;
+  gap: 8px;
 }
 
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display:flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 8px;
+  padding:8px;
 }
+
+
 
 .profile-image {
   background: rebeccapurple;
@@ -20,6 +33,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+
 }
 
 .logo {
@@ -45,4 +59,8 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  justify-content: center;
+  gap: 16px;
 }
+
